<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/StoryMenu"
        android:icon="@drawable/baseline_auto_stories_24"
        android:title="@string/story" />

    <item
        android:id="@+id/AddStoryMenu"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add" />

    <item
        android:id="@+id/MapsMenu"
        android:icon="@drawable/baseline_map_24"
        android:title="Maps" />

    <item
        android:id="@+id/ProfileMenu"
        android:icon="@drawable/baseline_insert_emoticon_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/DetailStoryMenu"
        android:title="@string/detail_story"
        android:visible="false" />


</menu>